--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Framework :: Django :: 2.2",
+    "Framework :: Django :: 3.0",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
@@ -32,7 +33,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.5"
-django = '^2.2'
+django = '^3.0'
 pyotp = '^2.3.'
 python-u2flib-server = '^5.0.'
 python-jose = '^3.'
